Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Aspidites</h1>
-        <h2>IPython turtle functionality. </h2>
+        <h2>IPython Turtle Functionality. </h2>
         <a href="https://github.com/macewanCMPT395/aspidites" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -28,22 +28,14 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Over the past 2 months Nathan, Nic and Jake of the Aspidites team have been working on IPython as a project for a 3rd year Computer Science course. Our goal was to add turtle functionality to IPython using an HTML canvas and Paper.js. We were able to meet our goal within the semester and we're quite happy with the result. There are some bugs and there's plenty of room for new features, but, we think it came out pretty nicely in the end so we would like to share it with you guys. Below you will find a link to our GitHub repository. Once you clone it to start it up just run "python -m IPython notebook" from the command line in the aspidites directory. Then start a new notebook with the following lines and you'll see our turtle.</p>
+          <p>Over the past 2 months Nathan, Nic and Jake of the Aspidites team have been working on IPython as a project for a 3rd year Computer Science course. Our goal was to add turtle functionality to IPython using an HTML canvas and Paper.js. We were able to meet our goal within the semester and we're quite happy with the result. There are some bugs and there's plenty of room for new features, but, we think it came out pretty nicely in the end so we would like to share it with you guys. Once you clone the repository, to start it up just run "python -m IPython notebook" from the command line in the aspidites directory. Then start a new notebook with the following lines and our turtle will appear.</p>
 
-<p>from NewTurtle import Turtle
-t = Turtle()
-t.forward(100)</p>
+<p>from NewTurtle import Turtle<br>t = Turtle()<br>t.forward(100)</p>
 
-<p>Some of the other turtle commands we have are:</p>
+<p>Here's a link to a video tutorial on YouTube:</p>
 
-<p>backward()
-right()
-left()
-circle()
-penup()
-pendown()
-speed()
-pencolor()</p>
+<p>Some of the other turtle commands we've implemented are:
+<br>backward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor()</p>
         </section>
 
         <aside id="sidebar">
@@ -63,6 +55,16 @@ pencolor()</p>
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("IPython Turtle Aspidites");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
