linked dev to index page

--- a/developers.html
+++ b/developers.html
@@ -21,6 +21,9 @@
       <div class="inner">
         <h1>Aspidites</h1>
         <h2>IPython Turtle Functionality. </h2>
+
+	<INPUT Type="BUTTON" VALUE="Home" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/'"> 
+	<INPUT Type="BUTTON" VALUE="Developer" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/developers'"> 
         <a href="https://github.com/macewanCMPT395/aspidites" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -28,14 +31,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Developers</p>
-
-<p>from NewTurtle import Turtle<br>t = Turtle()<br>t.forward(100)</p>
-
-<p>Here's a link to a video tutorial on YouTube:</p>
-
-<p>Some of the other turtle commands we've implemented are:
-<br>backward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor()</p>
+          <p>Developers info here</p>
         </section>
 
         <aside id="sidebar">
