--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Aspidites</h1>
         <h2>IPython Turtle Functionality. </h2>
 	<INPUT Type="BUTTON" VALUE="Home" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/'"> 
-	<INPUT Type="BUTTON" VALUE="Developers" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/developers'"> 
+	<INPUT Type="BUTTON" VALUE="Developer" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/developers'"> 
         <a href="https://github.com/macewanCMPT395/aspidites" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
