add image to homepage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 
 <p>from NewTurtle import Turtle<br>t = Turtle()<br>t.forward(100)</p>
 
+<p>This is what a normal turtle notebook environment looks like</p>
+<img src="http://i1357.photobucket.com/albums/q754/nwhcairns/turtle_asp_zps8a2e89c1.png" alt="Smiley face" >
 <p>Here's a link to a video tutorial on YouTube:</p>
+
+
 
 <p>Some of the other turtle commands we've implemented are:
 <br>backward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor()</p>
