add youtube tutorial

--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
 
 <p>This is what a normal turtle notebook environment looks like</p>
 <img src="http://i1357.photobucket.com/albums/q754/nwhcairns/turtle_asp_zps8a2e89c1.png" alt="Smiley face" >
-<p>Here's a link to a video tutorial on YouTube:</p>
+<p>Here's a video tutorial explaining how to use our turtle function:</p>
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/nJrqUp2hC3o?rel=0" frameborder="0" allowfullscreen></iframe>
 
 
 
-<p>Some of the other turtle commands we've implemented are:
+<br><p>Some of the other turtle commands we've implemented are:
 <br>backward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor()</p>
         </section>
 
