add getting started page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h1>Aspidites</h1>
         <h2>IPython Turtle Functionality. </h2>
 	<INPUT Type="BUTTON" VALUE="Home" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/'"> 
+	<INPUT Type="BUTTON" VALUE="Getting Started" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/start'">
 	<INPUT Type="BUTTON" VALUE="Developer" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/developers'"> 
         <a href="https://github.com/macewanCMPT395/aspidites" class="button"><small>View project on</small>GitHub</a>
       </div>
@@ -31,20 +32,12 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Over the past 2 months Nathan, Nic and Jake of the Aspidites team have been working on IPython as a project for a 3rd year Computer Science course. Our goal was to add turtle functionality to IPython using an HTML canvas and Paper.js. We were able to meet our goal within the semester and we're quite happy with the result. There are some bugs and there's plenty of room for new features, but, we think it came out pretty nicely in the end so we would like to share it with you guys. Once you clone the repository, to start it up just run "python -m IPython notebook" from the command line in the aspidites directory. Then start a new notebook with the following lines and our turtle will appear.</p>
+          <p>Over the past 2 months Nathan, Nic and Jake of the Aspidites team have been working on IPython as a project for a 3rd year Computer Science course. Our goal was to add turtle functionality to IPython using an HTML canvas and Paper.js. We were able to meet our goal within the semester and we're quite happy with the result. There are some bugs and there's plenty of room for new features, but, we think it came out pretty nicely in the end so we would like to share it with you guys.<br><br>Please see the "Getting Started" page for setup instructions and see our "Developer" page for info on where we added the turtle class and functions.</p>
 
-<p>from NewTurtle import Turtle<br>t = Turtle()<br>t.forward(100)</p>
 
 <p>This is what a normal turtle notebook environment looks like</p>
 <img src="http://i1357.photobucket.com/albums/q754/nwhcairns/turtle_asp_zps8a2e89c1.png" alt="Smiley face" >
-<p>Here's a video tutorial explaining how to use our turtle function:</p>
 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/nJrqUp2hC3o?rel=0" frameborder="0" allowfullscreen></iframe>
-
-
-
-<br><p>Some of the other turtle commands we've implemented are:
-<br>backward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor()</p>
         </section>
 
         <aside id="sidebar">
