--- a/start.html
+++ b/start.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Aspidites by macewanCMPT395/Developer</title>
+    <title>Aspidites by macewanCMPT395</title>
   </head>
 
   <body>
+
     <header>
       <div class="inner">
         <h1>Aspidites</h1>
         <h2>IPython Turtle Functionality. </h2>
-
 	<INPUT Type="BUTTON" VALUE="Home" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/'"> 
 	<INPUT Type="BUTTON" VALUE="Getting Started" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/start'">
 	<INPUT Type="BUTTON" VALUE="Developer" ONCLICK="window.location.href='http://macewancmpt395.github.io/aspidites/developers'"> 
@@ -32,7 +32,17 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Developers info here</p>
+          <p>Once you've downloaded a copy of Aspidites IPython the first thing you must do to run IPython is open up a terminal window and make the aspidites folder your current working directory. Once you're inside that folder you run IPython with the following command.<br><br>$ python -m IPython notebook<br><br>You should see IPython open in your default browser. From the dashboard click "New Notebook" then in the first cell you can import turtle just like in normal python using the command below.<br><br>from NewTurtle import Turtle<br><br>Now we must make a turtle for us to perfom the turtle command with, do this using the line below.
+<br><br>t = Turtle()<br><br>Now we're ready to give our turtle some commands. <br><br>t.forward(100)<br><br> If you hit the play button near the top of the page you should now see the turtle moving forward 100 in the blue canvas below the cell.</p>
+
+<p>Here's a video tutorial explaining how to use our turtle function:</p>
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/nJrqUp2hC3o?rel=0" frameborder="0" allowfullscreen></iframe>
+
+
+
+<br><br><p>Here are some of the other turtle commands we've implemented:
+<br><br>backward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor()</p>
         </section>
 
         <aside id="sidebar">
