add developer info

--- a/developers.html
+++ b/developers.html
@@ -32,7 +32,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Developers info here</p>
+          <p>If you want to add to, or modify this project here are a few things that will be useful to keep in mind.<br><br>The changes are primarily located in: <br> "IPython/html/static/notebook/js/outputarea.js"<br> "/IPython/extensions/NewTurtle.py"<br>"IPython/html/static/notebook/js/myScript.js".<br><br>We have created a mime type called "turtle-text" and a function that receives it called "append_turtle" in outputarea.js.<br><br>The Turtle commands are sent as a string of characters that are exported when the "run cell" button is pressed. You can get the details in the NewTurtle.py module.<br><br>The commands are parsed and drawn using the paper.js library from within the myScript.js file<br><br>So far we have implemented the following turtle commands.<br>backward()<br>forward()<br>right()<br>left()<br>circle()<br>penup()<br>pendown()<br>speed()<br>pencolor().</p>
         </section>
 
         <aside id="sidebar">
