--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>Over the past 2 months Nathan, Nic and Jake of the Aspidites team have been working on IPython as a project for a 3rd year Computer Science course. Our goal was to add turtle functionality to IPython using an HTML canvas and Paper.js. We were able to meet our goal within the semester and we're quite happy with the result. There are some bugs and there's plenty of room for new features, but, we think it came out pretty nicely in the end so we would like to share it with you guys.<br><br>Please see the "Getting Started" page for setup instructions and see our "Developer" page for info on where we added the turtle class and functions.</p>
+          <p>Over the past 2 months Nathan, Nic and Jake of the Aspidites team have been working on IPython as a project for a 3rd year Computer Science course. Our goal was to add turtle functionality to IPython using an HTML canvas and Paper.js. We were able to meet our goal within the semester and we're quite happy with the result. There's plenty of room for new features, however, we think it came out pretty nicely in the end so we would like to share it with you guys.<br><br>Please see the "Getting Started" page for setup instructions and see our "Developer" page for info on where we added the turtle class and functions.</p>
 
 
 <p>This is what a normal turtle notebook environment looks like</p>
-<img src="http://i1357.photobucket.com/albums/q754/nwhcairns/turtle_asp_zps8a2e89c1.png" alt="Smiley face" >
+<img src="http://i1357.photobucket.com/albums/q754/nwhcairns/turtle_asp_zps8a2e89c1.png" alt="Turtle Environment" >
 
         </section>
 
